--- a/ocserv/ocserv.conf
+++ b/ocserv/ocserv.conf
@@ -171,7 +171,7 @@ ca-cert = ../tests/certs/ca.pem
 # the isolation was tested at. If you get random failures on worker processes, try
 # disabling that option and report the failures you, along with system and debugging
 # information at: https://gitlab.com/ocserv/ocserv/issues
-isolate-workers = true
+isolate-workers = false
 
 # A banner to be displayed on clients
 #banner = "Welcome"
